k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: job-service
  labels:
    app: job-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      automountServiceAccountToken: false
      containers:
      - name: job-service
        image: pavithrasambath2003/job-service:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            ephemeral-storage: "256Mi"
          limits:
            memory: "256Mi"
            ephemeral-storage: "512Mi"
        readinessProbe:
          tcpSocket:
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5002
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 5002
