k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: job-service
spec:
  type: ClusterIP
  selector:
    app: job-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
