k8s/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: job-service-route
  namespace: dev
spec:
  parentRefs:
  - name: medicojob-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /jobs
    backendRefs:
    - name: job-service
      port: 5002
  - matches:
    - path:
        type: PathPrefix
        value: /socket.io
    backendRefs:
    - name: job-service
      port: 5002
